--- a/index.html
+++ b/index.html
@@ -2,14 +2,43 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <h1> Receita de Bolo Aleksândrovskoie</h1>
+
+  <<img src="https://mf.b37mrtl.ru/rbthmedia/images/2021.05/original/60929f3f15e9f9570b143443.jpg" alt="">
+  
+     <h2>Ingredientes: </h2>
+
+   <ul>
+  
+   <li> 330 g de farinha</li>
+   <li>200 g de manteiga</li>
+   <li>100 g de açúcar</li>
+   <li>1 ovo</li>
+   <li> 10 g de essência de baunilha</li>
+   <li>1 colher de chá de sal</li>
+   <li>1 colher de chá de fermento em pó</li>
+   <li>1 colher de sopa raspas de limão</li>
+   <li>180 g açúcar em pó</li>
+   <li>2 a 3 colheres de sopa de suco de limão</li>
+   <li>2 a 3 colheres de sopa água quente</li>
+   <li>1 colher de sopa de cacau</li>
+   </ul>
+      
+  <h3>Modo de preparo:</h3>
+
+<ol>
+    <li>Bata a manteiga com açúcar e açúcar de baunilha até a mistura ficar branca (cerca de 5 minutos). </li>
+    <li>Adicione um ovo e continue batendo por mais três minutos.</li>
+
+    <li>Peneire a farinha com sal e o fermento.</li>
+    <li>adicione as raspas de limão na tigela.</li>
+    <li>Amasse até ficar macio. Enrole a massa em plástico filme e deixe descansar na geladeira por meia hora.</li>
+ </ol>
+
 </head>
 
 <body>
-  Hello world
+  
   <script src="script.js"></script>
 </body>
 
